--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
+    "stream": "^0.0.3",
     "xlsx": "^0.18.5"
   }
 }
