--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "stream": "^0.0.3",
     "xlsx": "^0.18.5"
   }
